objects/CMPL123CME__MedDRA_Preferred_Term__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__Backup_JSON__c</fullName>
        <description>This is a backend field for cleanup job</description>
        <inlineHelpText>This is a backend field for cleanup job</inlineHelpText>
        <label>Backup JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Transaction_ID__c</fullName>
        <description>Used to store an unique ID</description>
        <label>Transaction ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active Status of Preferred Term</description>
        <inlineHelpText>Active Status of Preferred Term</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__meddra_release_key__c</fullName>
        <description>Used to store an release info</description>
        <externalId>true</externalId>
        <label>MedDRA Release Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__null_field__c</fullName>
        <description>This field is null</description>
        <inlineHelpText>This field is null</inlineHelpText>
        <label>Null field</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_costart_sym__c</fullName>
        <description>Symbol allocated by the COSTART terminology</description>
        <inlineHelpText>Symbol allocated by the COSTART terminology</inlineHelpText>
        <label>PT COSTART Code</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_harts_code__c</fullName>
        <description>Code allocated by the HARTS terminology</description>
        <inlineHelpText>Code allocated by the HARTS terminology</inlineHelpText>
        <label>PT HARTS Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_icd10_code__c</fullName>
        <description>Code allocated by the 10th Revision of the International Classification of Diseases</description>
        <inlineHelpText>Code allocated by the 10th Revision of the International Classification of Diseases</inlineHelpText>
        <label>PT ICD-10 Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_icd9_code__c</fullName>
        <description>Code allocated by the 9th Revision of the International Classification of Diseases</description>
        <inlineHelpText>Code allocated by the 9th Revision of the International Classification of Diseases</inlineHelpText>
        <label>PT ICD-9 Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_icd9cm_code__c</fullName>
        <description>Code allocated by the 9th Revision of the International Classification of Diseases, Clinical Modification</description>
        <inlineHelpText>Code allocated by the 9th Revision of the International Classification of Diseases, Clinical Modification</inlineHelpText>
        <label>PT ICD-9-CM Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_jart_code__c</fullName>
        <description>Code allocated by the J-ART terminology</description>
        <inlineHelpText>Code allocated by the J-ART terminology</inlineHelpText>
        <label>PT J-ART Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_kana1__c</fullName>
        <description>Japanese reading of PT (half-width kana). If there is another reading</description>
        <inlineHelpText>Japanese reading of PT (half-width kana). If there is another reading</inlineHelpText>
        <label>PT Kana1</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_kana2__c</fullName>
        <description>Japanese reading of PT (half-width kana). If there is another reading</description>
        <inlineHelpText>Japanese reading of PT (half-width kana). If there is another reading</inlineHelpText>
        <label>PT Kana2</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_kana__c</fullName>
        <description>Japanese reading of PT (half-width kana)</description>
        <inlineHelpText>Japanese reading of PT (half-width kana)</inlineHelpText>
        <label>PT Kana</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_kanji__c</fullName>
        <description>PT Kanji Name</description>
        <inlineHelpText>PT Kanji Name</inlineHelpText>
        <label>PT Kanji</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_name__c</fullName>
        <description>Full name of the Preferred Term</description>
        <externalId>true</externalId>
        <inlineHelpText>Full name of the Preferred Term</inlineHelpText>
        <label>PT Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_soc_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary System Organ Class to which the Preferred Term is linked</description>
        <inlineHelpText>The primary System Organ Class to which the Preferred Term is linked</inlineHelpText>
        <label>PT SOC Code</label>
        <referenceTo>CMPL123CME__MedDRA_System_Organ_Class__c</referenceTo>
        <relationshipLabel>MedDRA Preferred Term</relationshipLabel>
        <relationshipName>MedDRA_Preferred_Term</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_unique_key__c</fullName>
        <externalId>true</externalId>
        <label>PT Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_whoart_code__c</fullName>
        <description>Code allocated by the WHO-ART terminology</description>
        <inlineHelpText>Code allocated by the WHO-ART terminology</inlineHelpText>
        <label>PT WHO-ART Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>MedDRA Preferred Term</label>
    <nameField>
        <label>PT Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedDRA Preferred Term</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CMPL123CME__PT_Code_Should_Be_8_Characters_Only</fullName>
        <active>true</active>
        <description>Preferred Term Code value  must have 8 characters only</description>
        <errorConditionFormula>OR(
LEN(Name) &lt; 8 ,
LEN(Name) &gt; 8
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>PT Code value  must have 8 characters only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__PT_Name_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__pt_name__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__pt_name__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
</CustomObject>